--- a/config.toml
+++ b/config.toml
@@ -2,14 +2,14 @@ baseURL = "https://tehgm.net/"
 languageCode = "en-gb"
 title = "TehGM"
 theme = "LoveIt-0.2.10"
-dateFormat = "02.01.2006"
 images = [ "https://cdn.tehgm.net/global/img/tehgm_avatar.png" ]
 
 [permalinks]
-	posts = "blog/:title"
+	blog = "/:sections/:slug"
 
 [params]
 	version = "0.2.X"
+	dateFormat = "02.01.2006"
 	defaultTheme = "dark"
 	description = "ASP.NET Core programmer by profession. Gamer and developer of libraries and bots by hobby. This is my personal website - technology, personal thoughts, and more."
 
@@ -22,6 +22,9 @@ images = [ "https://cdn.tehgm.net/global/img/tehgm_avatar.png" ]
 
 	[params.footer]
 		hugo = false
+
+	[params.Blog]
+		title = "TehGM's Blog"
 
 	[params.home.profile]
 		enable = true
