Fix StackOverflow profile link

--- a/config.toml
+++ b/config.toml
@@ -48,7 +48,7 @@ images = [ "https://cdn.tehgm.net/global/img/tehgm_avatar.png" ]
 		Twitter = "TehOriginalGM"
 		Youtubecustom = "TehGM"
 		Reddit = "TehGM"
-		Stackoverflow = "TehGM"
+		Stackoverflow = "4644581/tehgm?tab=profile"
 		Patreon = "TehGMdev"
 		Steam = "TehGM"
 		Twitch = "TehGM"
